2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Fix bug with reading one bit per
	sample RGB images.

2008-12-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.3.3 released.
	* NEWS.txt: Updated news for release.

2008-12-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (OpenCache): Fix a code ordering problem
	which results in 'identify' throwing an assertion for PseudoClass
	image files.  This bug was added in the 1.3.2 release.
	* coders/tiff.c (ReadTIFFImage): Fix bug with 'ping' mode.

2008-12-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Use 'double' rather than 64-bit
	integer to accumulate totalized values.  Make the cluster summary
	report more concise.

2008-12-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Cluster threshold is expressed
	as a percentage of total cluster pixels.  Optimize for larger
	images.

2008-12-01  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/segment.c (SegmentImage): Accelerate using OpenMP.

2008-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/utility.c (ExpandFilenames): Remove some arbitrary
	argument length limits.  Pass -convolve argument without any
	additional checking.  Verify that strings are not truncated during
	copy.
	(ListFiles): Be more memory efficient.
	* magick/fx.c (ConvolveImage): Fix formatting problem when logging
	the convolution kernel used.
	* magick/utility.c (TranslateTextEx): Support formatting huge
	comment text.

2008-11-29  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh: GraphicsMagick 1.3.2 released.
	* NEWS.txt: Updated news for release.

2008-11-28  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/fx.c (ConvolveImage): Don't process opacity channel
	unless image has one.
	* magick/effect.c (MotionBlurImage): Use