@@ -1,4 +1,4 @@
-.TH gm 1 "2008/12/03" "GraphicsMagick"
+.TH gm 1 "2008/12/11" "GraphicsMagick"
 .TP
 .in 15
 .in 15
@@ -3749,15 +3749,6 @@ unique colors than the target window colormap allows.  Use
 \fRspecify the window group
 .TP
 .B "-write \fI<filename>"\fP
-\fRwrite  an image sequence [\fIconvert, composite\fP]
-
-The image sequence following the \fB-write\fP \fIfilename\fPoption is
-written out, and then processing continues with the
-same image in its current state if there are additional options.  To
-restore the image to its original state after writing it, use
-the \fB+write\fP \fIfilename\fP option.
-.TP
-.B "-write \fI<filename>"\fP
 \fRwrite the image to a file [\fIdisplay\fP]
 
 If \fIfilename\fP already exists, you will be prompted as to whether it should
@@ -4559,9 +4550,6 @@ Options, above.
 .TP
 .B "-white-point \fI<x>,<y>"\fP
 \fRchromaticity white point
-.TP
-.B "-write \fI<filename>"\fP
-\fRwrite  an image sequence [\fIconvert, composite\fP]
 
 For a more detailed description of each option, see
 Options, above.
@@ -5609,9 +5597,6 @@ Options, above.
 .TP
 .B "-white-threshold \fIred[,green][,blue][,opacity]"\fP
 \fRpixels above the threshold become white
-.TP
-.B "-write \fI<filename>"\fP
-\fRwrite  an image sequence [\fIconvert, composite\fP]
 
 For a more detailed description of each option, see
 Options, above.
