@@ -21,6 +21,17 @@
 </tr>
 </table>
 <p>
+2008-12-11  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> magick/command.c: Removed mention of -write from composite and
+        convert help output since it can't work as specified with current
+        command line architecture.<BR>
+  <LI> doc/options.imdoc: Removed documentation for composite and
+        convert since it doesn't work.
+
+</UL>
+<p>
 2008-12-09  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
