@@ -1780,17 +1780,6 @@ width=15><b><font face="Helvetica, Arial"
     <a href="GraphicsMagick.html#details-white-threshold">-white-threshold</a> <i>red[,green][,blue][,opacity]</i>
 </font></font></font></b></td></tr></table>
 <table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>pixels above the threshold become white</td></tr></table>
-<table BORDER=0 WIDTH="94%">
-<tr>
-<td width="3%"><br></td> 
-<td ALIGN=LEFT BGCOLOR="#FFFFFF">
-<img SRC="images/right_triangle_option.png"
-ALT=">" BORDER=0 height=14
-width=15><b><font face="Helvetica, Arial"
-><font color="#00B04F"><font size="+1">
-    <a href="GraphicsMagick.html#details-write">-write</a> <i>&lt;filename&gt;</i>
-</font></font></font></b></td></tr></table>
-<table width="90%" border="0" cellspacing="0"              cellpadding="8">              <tr><td width="6%"><br></td><td>write  an image sequence [<em>convert, composite</em>]</td></tr></table>
 <p>
 For a more detailed description of each option, see
 Options, above.
